--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,66 @@
-#btn {
-  background-color: red;
-  color: blue;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.container {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: end;
+}
+.box {
+  width: 90%;
+  height: 100%;
+}
+table {
+  border-collapse: collapse;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+.box-mouth {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+#btn-back,
+#btn-next {
+  padding: 10px;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+}
+#btn-back:hover,
+#btn-next:hover {
+  cursor: pointer;
+  background-color: black;
+  color: white;
+}
+.mouth {
+  font-size: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+.weeks {
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 14.28%; /* Четыре ячейки на строку, 100% / 7 */
+  height: 5%;
+}
+.day {
+  border: 1px solid black;
+  font-size: 18px;
+  width: 14.28%; /* Четыре ячейки на строку, 100% / 7 */
+  height: 10%;
+}
+.day:hover {
+  background-color: green;
+  cursor: pointer;
 }
