--- a/src/main.css
+++ b/src/main.css
@@ -1,127 +1,69 @@
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 body {
-  position: relative;
+  background-color: #f2f2f2;
+}
+ul,
+li {
+  list-style: none;
+}
+.container_calendar {
   height: 100vh;
-  background-size: cover;
+  width: 100%;
 }
-.calendar {
-  margin: 0 auto;
-}
-.container {
-  height: 100vh;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.header {
+.container_calendar__box-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-height: 5%;
+  padding: 0 20px;
 }
-.days-weeks {
+.container_calendar__box-header_btn-month {
   display: flex;
 }
-.dates {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
+.next_month_btn {
+  margin: 0px 30px;
 }
-.days-weeks {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-}
-
-.day-name {
-  width: 80px;
-  height: 80px;
+.container_calendar__box-header_btn-task-calendar {
   display: flex;
-  justify-content: center;
-  align-items: center;
+}
+.container_calendar__box-center {
+  height: 90%;
+}
+.container_calendar__box-day {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(7, 5fr);
+  grid-template-rows: repeat(5, 1fr);
+  padding: 10px;
+}
+.container_calendar__box-weeks {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  text-align: center;
+  font-size: 20px;
 }
 .days {
-  width: 80px;
-  height: 80px;
-  border: 1px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.days:hover {
-  background-color: aqua;
-  cursor: pointer;
-}
-.popup-content {
-  display: flex;
-  flex-direction: column;
-}
-.task-title {
-  margin: 10px 0;
-  border: 1px solid black;
   padding: 10px;
-  text-align: center;
-}
-.popup {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  border: 1px solid rgb(167, 167, 167);
   background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  width: 20%;
-  z-index: 1000;
-}
-.overlay {
-  display: none;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgb(43, 43, 43);
-  opacity: 0.8;
-}
-.box-btn {
   display: flex;
-  justify-content: space-between;
-}
-.show {
-  display: block;
-}
-.box-task {
-  border: 1px solid black;
-  text-align: center;
-  margin-bottom: 10px;
-}
-.added-task {
-  font-family: Arial, Helvetica, sans-serif;
-}
-.task-indicator {
-  color: green;
-}
-.close-btn {
-  display: flex;
+  align-items: start;
   justify-content: center;
-  align-items: center;
-
-  cursor: pointer;
-  width: 20px;
-  height: 20px;
-  font-size: 28px;
-  margin-bottom: 5px;
-  font-weight: 600;
 }
-.close-btn:hover {
-  color: blue;
-  font-weight: 900;
-  font-size: 38px;
+.days:first-child {
+  border-top-left-radius: 15px;
+}
+.days:nth-child(29) {
+  border-bottom-left-radius: 15px;
+}
+.days:nth-child(7) {
+  border-top-right-radius: 15px;
+}
+.days:last-child {
+  border-bottom-right-radius: 15px;
 }
