--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 }
 body {
   background-color: #f2f2f2;
+  font-family: Arial, Helvetica, sans-serif;
 }
 ul,
 li {
@@ -60,6 +61,10 @@ li {
   align-items: start;
   justify-content: center;
 }
+.days:hover {
+  cursor: pointer;
+  background-color: rgb(235, 235, 235);
+}
 .days:first-child {
   border-top-left-radius: 15px;
 }
@@ -71,5 +76,8 @@ li {
 }
 .days:last-child {
   border-bottom-right-radius: 15px;
+}
+.daysPrevNext {
+  color: rgb(186, 186, 186);
 }
 
