--- a/src/main.css
+++ b/src/main.css
@@ -40,6 +40,7 @@ li {
   height: 90%;
 }
 .container_calendar__box-day {
+  position: relative;
   height: 100%;
   width: 100%;
   display: grid;
@@ -140,4 +141,15 @@ li {
   padding: 3px;
   color: white;
   font-size: 14px;
+}
+.popup {
+  position: absolute;
+  display: flex;
+  z-index: 999;
+  background-color: #f2f2f2;
+  background-color: red;
+  width: 30%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
