--- a/src/main.css
+++ b/src/main.css
@@ -40,7 +40,7 @@ li {
   height: 90%;
 }
 .container_calendar__box-day {
-  position: relative;
+  /* position: relative; */
   height: 100%;
   width: 100%;
   display: grid;
@@ -235,9 +235,11 @@ li {
   font-weight: 600;
 }
 
-.box {
-  display: none;
-  width: 400px;
-  height: 400px;
-  border: 1px solid red;
+.container-task {
+  /* position: absolute; */
+  border: 2px solid black;
+  width: 300px;
+  height: 300px;
+  top: 0;
+  left: 0;
 }
