--- a/src/main.css
+++ b/src/main.css
@@ -270,3 +270,9 @@ li {
   color: white;
   background-color: #0b57d0;
 }
+
+.block {
+  width: 500px;
+  height: 500px;
+  border: 2px solid black;
+}
