функционал с сохранением задач готов

--- a/src/main.css
+++ b/src/main.css
@@ -98,7 +98,7 @@ li {
   text-decoration: none;
   color: black;
   width: 100px;
-  border: 1px solid black;
+  border: 1px solid rgb(167, 167, 167);
   text-align: center;
   padding: 5px;
   border-radius: 10px;
@@ -163,11 +163,11 @@ li {
 .popup {
   position: absolute;
   display: none;
+  z-index: 999;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 10);
   flex-direction: column;
   align-items: end;
-  z-index: 999;
   background-color: #f2f2f2;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 10);
   width: 30%;
   height: 30%;
   top: 50%;
@@ -184,7 +184,7 @@ li {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   display: none; /* Скрыть по умолчанию */
-  z-index: 998; /* Чуть ниже чем popup */
+  /* z-index: 50; /* Чуть ниже чем popup */
 }
 .input_value {
   width: 80%;
@@ -226,7 +226,8 @@ li {
 .task-title:hover {
   background-color: #c4c7c5;
 }
-.close-btn {
+.close-btn,
+.close-btn-task {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -234,7 +235,8 @@ li {
   width: 20px;
   height: 20px;
 }
-.close-btn:hover {
+.close-btn:hover,
+.close-btn-task:hover {
   cursor: pointer;
   border-radius: 50%;
   background-color: #c4c7c5;
@@ -271,8 +273,37 @@ li {
   background-color: #0b57d0;
 }
 
-.block {
-  width: 500px;
-  height: 500px;
-  border: 2px solid black;
+.task-block {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%;
+  height: 80vh;
+  overflow-y: auto;
+  background-color: white;
+  border-radius: 20px;
+  padding: 20px;
+  display: none;
+  /* z-index: 997; */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 10);
+}
+.text-header-task {
+  font-size: 18px;
+}
+.item-task {
+  margin-bottom: 20px;
+  font-size: 14px;
+  color: #464646;
+  font-weight: 600;
+}
+.title-task,
+.description-task {
+  margin-bottom: 4px;
+}
+.box-btnAndText {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 28px;
 }
