--- a/src/main.css
+++ b/src/main.css
@@ -186,6 +186,15 @@ li {
   display: none; /* Скрыть по умолчанию */
   /* z-index: 50; /* Чуть ниже чем popup */
 }
+.box-button {
+  /* width: 100%; */
+  display: flex;
+}
+#btnSave,
+#btnClosed {
+  padding: 10px;
+  border-radius: 10px;
+}
 .input_value {
   width: 80%;
   margin: 30px 0 5px 0;
