--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,145 @@
-h1 {
-  color: rgb(30, 255, 0);
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.calendar-container {
+  width: 99%;
+  margin: 0 auto;
+}
+
+.calendar-controls {
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  margin: 10px 0;
+}
+
+.calendar-month {
+  font-size: 24px;
+}
+
+.calendar-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: 50px repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  width: 100%;
+  height: 90vh;
+}
+
+.calendar-cell {
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px;
+}
+
+.calendar-cell--header {
+  background-color: aliceblue;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.calendar-month {
+  min-width: 200px;
+  text-align: center;
+}
+
+.calendar-cell--previous,
+.calendar-cell--next {
+  background-color: rgb(211, 211, 211);
+}
+.control-button-next,
+.control-button-prev {
+  padding: 2px;
+}
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
+  z-index: 9999; /* Поверх других элементов */
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  position: absolute;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: left;
+  min-width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+}
+
+.close-popup {
+  float: right;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+#save-task {
+  margin-top: 10px;
+}
+h2 {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.tasks {
+  margin-left: 50px;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 10px;
+}
+.tasks:hover {
+  cursor: pointer;
+  background-color: azure;
+}
+
+.popupTasks {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
+  z-index: 9999; /* Поверх других элементов */
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-contentTasks {
+  position: absolute;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: left;
+  min-width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  max-height: 90vh;
+  overflow-y: auto;
+}
+
+.close-popupTasks {
+  float: right;
+  font-size: 24px;
+  cursor: pointer;
 }
