--- a/src/styles.css
+++ b/src/styles.css
@@ -143,3 +143,44 @@ h2 {
   font-size: 24px;
   cursor: pointer;
 }
+
+.popupTaskDetail {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-contentTaskDetail {
+  position: absolute;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: left;
+  min-width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+}
+.current-task:hover,
+.task:hover {
+  background-color: aquamarine;
+  cursor: pointer;
+}
+.close-popupDetail:hover {
+  cursor: pointer;
+}
+.popup-contentTaskDetail input,
+.popup-contentTaskDetail textarea {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 5px;
+}
